# BLAKE3-specs

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  bao.bib  bao.tex  blake3.bib  blake3.tex  docker_build.sh  reference_impl.rs
benchmarks/: Cargo.toml  README.md  bar_chart.py  notes.txt  plot.py  plotz.py
benchmarks/benches/: bench.rs
benchmarks/kangarootwelve/: build.rs
benchmarks/kangarootwelve/K12/: .travis.yml  Makefile.build  README.markdown
benchmarks/kangarootwelve/K12/lib/: KangarooTwelve.c  KangarooTwelve.h  align.h
benchmarks/kangarootwelve/K12/lib/Inplace32BI/: KeccakP-1600-inplace32BI.c
benchmarks/kangarootwelve/K12/lib/Optimized64/: KeccakP-1600-AVX2.s  KeccakP-1600-AVX512-plainC.c  KeccakP-1600-AVX512.s  KeccakP-1600-SnP.h  KeccakP-1600-opt64.c  KeccakP-1600-runtimeDispatch.c  KeccakP-1600-timesN-AVX2.c  KeccakP-1600-timesN-AVX512.c  KeccakP-1600-timesN-SSSE3.c
benchmarks/kangarootwelve/K12/lib/Plain64/: KeccakP-1600-SnP.h  KeccakP-1600-plain64.c
benchmarks/kangarootwelve/K12/tests/: main.c  testKangarooTwelve.c  testPerformance.c  testPerformance.h
benchmarks/results/: avx2_rayon.pgf  avx2_rayon.tikz  avx512_detect_c.pgf  avx512_detect_c.tikz  rpizero.pgf  rpizero.tikz
benchmarks/results/avx2_rayon/bench_group/1024/report/: index.html
benchmarks/results/avx2_rayon/bench_group/1048576/report/: index.html
benchmarks/results/avx2_rayon/bench_group/128/report/: index.html
benchmarks/results/avx2_rayon/bench_group/131072/report/: index.html
benchmarks/results/avx2_rayon/bench_group/16384/report/: index.html
benchmarks/results/avx2_rayon/bench_group/16777216/report/: index.html
benchmarks/results/avx2_rayon/bench_group/2048/report/: index.html
benchmarks/results/avx2_rayon/bench_group/2097152/report/: index.html
benchmarks/results/avx2_rayon/bench_group/256/report/: index.html
benchmarks/results/avx2_rayon/bench_group/262144/report/: index.html
benchmarks/results/avx2_rayon/bench_group/32768/report/: index.html
benchmarks/results/avx2_rayon/bench_group/4096/report/: index.html
benchmarks/results/avx2_rayon/bench_group/4194304/report/: index.html
benchmarks/results/avx2_rayon/bench_group/512/report/: index.html
benchmarks/results/avx2_rayon/bench_group/524288/report/: index.html
benchmarks/results/avx2_rayon/bench_group/64/report/: index.html
benchmarks/results/avx2_rayon/bench_group/65536/report/: index.html
benchmarks/results/avx2_rayon/bench_group/8192/report/: index.html
benchmarks/results/avx2_rayon/bench_group/8388608/report/: index.html
benchmarks/results/avx2_rayon/bench_group/blake2b/report/: index.html
benchmarks/results/avx2_rayon/bench_group/blake2bp/report/: index.html
benchmarks/results/avx2_rayon/bench_group/blake2s/report/: index.html
benchmarks/results/avx2_rayon/bench_group/blake2sp/report/: index.html
benchmarks/results/avx2_rayon/bench_group/blake3/report/: index.html
benchmarks/results/avx2_rayon/bench_group/report/: index.html
benchmarks/results/avx2_rayon/bench_group/sha256/report/: index.html
benchmarks/results/avx2_rayon/bench_group/sha3-256/report/: index.html
benchmarks/results/avx2_rayon/bench_group/sha512/report/: index.html
benchmarks/results/avx2_rayon/report/: index.html
benchmarks/results/avx512_metal_asm/bench_group/blake3/report/: index.html
benchmarks/results/avx512_metal_asm/bench_group/report/: index.html
benchmarks/results/avx512_metal_asm/report/: index.html
benchmarks/results/k12_long/bench_group/report/: index.html
benchmarks/results/k12_long/report/: index.html
benchmarks/src/: lib.rs
benchmarks/thread_benches/: Cargo.toml  plot.py  plotz.py
benchmarks/thread_benches/benches/: bench.rs
benchmarks/thread_benches/results/avx512_metal_asm/report/: index.html
img/: avx512.tikz  chunk.tikz  (+5 more)
(+13609 files in other folders)
