[package]
name = "blake3_paper_benchmarks"
version = "0.0.0"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
# The official BLAKE3 Rust implementation. As a path dependency for now, until
# the repo becomes public.
blake3 = { path = "../../BLAKE3", features = ["c_avx512"] }
# The uninline_portable feature improves BLAKE2b performance on the RPiZero.
# That makes BLAKE2b performance on that platform in these benchmarks better
# than what you get from e.g. OpenSSL BLAKE2b, though still worse than BLAKE2s.
blake2b_simd = { version = "0.5.10", features = ["uninline_portable"] }
blake2s_simd = "0.5.10"
criterion = "0.3.0"
kangarootwelve = { path = "./kangarootwelve" }
openssl = { version = "0.10.26", features = ["vendored"] }
page_size = "0.4.1"
rand = "0.7.2"
