[package]
name = "blake3_paper_benchmarks"
version = "0.0.0"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
blake3 = { version = "1.3.1" }
# The uninline_portable feature improves BLAKE2b performance on the RPiZero.
# That makes BLAKE2b performance on that platform in these benchmarks better
# than what you get from e.g. OpenSSL BLAKE2b, though still worse than BLAKE2s.
blake2b_simd = { version = "1.0.0", features = ["uninline_portable"] }
blake2s_simd = "1.0.0"
criterion = "0.3.5"
kangarootwelve = { path = "./kangarootwelve" }
openssl = { version = "0.10.40", features = ["vendored"] }
page_size = "0.4.2"
rand = "0.8.5"
