[package]
name = "blake3_paper_benchmarks_threading"
version = "0.0.0"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
blake3 = { version = "1.3.1", features = ["rayon"] }
criterion = "0.3.5"
page_size = "0.4.2"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.5.3"
once_cell = "1.12.0"
